# Smart-Grammar-Checker-using-DSL-and-Rule-Based-Parsing

./: .gitignore  README.md  package-lock.json  package.json  render.yaml  tailwind.config.js  vite.config.js
backend/: pyproject.toml  reproduce_error.py  requirements.txt  run.py  seed_demo_data.py
backend/src/grammar_dsl/: __init__.py  main.py
backend/src/grammar_dsl/api/: __init__.py  server.py
backend/src/grammar_dsl/data/: __init__.py  dictionary.json  grammar_rules.json  repository.py  synonyms.json  verbs.json
backend/src/grammar_dsl/data/compiled/: exercise_blueprints.json  feature_catalog.json  knowledge_base.json  lexical_pools.json  phrase_index.json  (+3 more)
backend/src/grammar_dsl/dsl/: error_listener.py  exceptions.py  parser_service.py
backend/src/grammar_dsl/engine/: __init__.py  grammar_checker.py  spelling_checker.py  suggestion_engine.py  synonym_engine.py  types.py  verb_engine.py
backend/src/grammar_dsl/learning/: __init__.py  generator.py  grader.py
backend/src/grammar_dsl/personalization/: __init__.py  planner.py  store.py
backend/src/grammar_dsl/preprocessing/: __init__.py  compiler.py  source_packs.py
backend/src/grammar_dsl/services/: __init__.py  command_service.py  corpus_nlp.py  spacy_detector.py
backend/tests/: test_command_service.py  test_importers.py  test_personalization_store.py  test_preprocessing_compiler.py  test_tense_fixtures.py
backend/tests/fixtures/: paragraph_cases.json  tense_cases.json
backend/tests/fixtures/importers/: cambridge_a2_sample.txt  collocation_sample.csv  oewn_sample.json  scowl_sample.txt
(+68 files in other folders)
