[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grammar-dsl-backend"
version = "0.1.0"
description = "Rule-based English grammar checker powered by ANTLR."
requires-python = ">=3.11"
dependencies = [
    "antlr4-python3-runtime==4.13.2",
    "python-dotenv>=1.0.1",
    "torch",
    "transformers",
    "accelerate",
    "spacy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

